# Aonir

./: .clang-tidy  CMakeLists.txt  README.md  vcpkg.json
Applications/: CMakeLists.txt  Sandbox.cpp
Source/Aonir/Core/: CMakeLists.txt
Source/Aonir/Core/Utils/: Exception.cpp  Exception.hpp  Logger.cpp  Logger.hpp  Math.hpp  Overload.hpp
Source/Aonir/Core/Window/: Window.cpp  Window.hpp  WindowEvents.hpp  WindowManager.cpp  WindowManager.hpp
Source/Aonir/Platform/: CMakeLists.txt  WindowFactory.hpp
Source/Aonir/Platform/Win32/: CMakeLists.txt  WindowFactory.cpp
Source/Aonir/Platform/Win32/Utils/: LastError.cpp  LastError.hpp  MessageThead.cpp  MessageThread.cpp  MessageThread.hpp  StringConversion.cpp  StringConversion.hpp
Source/Aonir/Platform/Win32/Window/: WindowClass.cpp  WindowClass.hpp  WindowHandle.cpp  WindowHandle.hpp  WindowListener.cpp  WindowListener.hpp
Tests/: CMakeLists.txt
Tests/Core/: TestException.cpp  TestLogger.cpp  TestWindow.cpp
